--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,8 +19,12 @@ a {
   color: #FFF;
 }
 
-a:hover {
+a:hover, .searchInfo {
   color: $secondary-color;
+}
+
+p {
+  color: #2699fb;
 }
 
 button {
@@ -28,9 +32,49 @@ button {
   color: #FFF;
 }
 
-.center {
-  position: absolute;
+.results {
+  background-color: #EEE;
+}
+
+.details {
+  font-size: 24px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
   left: 0;
-  right: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity*/
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  color: #2699FB;
   margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  text-align: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
 }
