--- a/scss/main.scss
+++ b/scss/main.scss
@@ -78,3 +78,22 @@ button {
   color: #000;
   text-decoration: none;
 }
+
+#hideMe {
+  height: 900px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+#showMe {
+display: none; }
