--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,7 +41,7 @@ h2 {
   padding-top: 100px;
 }
 
-h1, h2 {
+h1, h2, h3 {
   color: $primary-color;
 }
 
@@ -49,7 +49,7 @@ a {
   color: #FFF;
 }
 
-a:hover, .searchInfo {
+a:hover, .searchInfo, .resultInfo {
   color: $secondary-color;
 }
 
@@ -62,11 +62,28 @@ button {
   color: #FFF;
 }
 
+footer {
+  background-color: $primary-color;
+}
+
+.searchInfo {
+  padding-top: 80px;
+}
+
+.footer {
+  color: #FFF;
+}
+
 .results {
   background-color: #EEE;
 }
 
 .details {
+  font-size: 24px;
+}
+
+.linkResult {
+  color: $secondary-color;
   font-size: 24px;
 }
 
@@ -97,7 +114,7 @@ button {
 
 /* The Close Button */
 .close {
-  color: #aaaaaa;
+  color: #AAA;
   text-align: right;
   font-size: 28px;
   font-weight: bold;
@@ -105,7 +122,7 @@ button {
 
 .close:hover,
 .close:focus {
-  color: #000;
+  color: $secondary-color;
   text-decoration: none;
 }
 
