--- a/css/main.css
+++ b/css/main.css
@@ -3,27 +3,21 @@
   padding: 0;
   box-sizing: border-box; }
 
-body {
-  background-color: #000; }
-
 header {
   background-image: linear-gradient(rgba(0, 7, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/activitybckgrnd.jpg");
   background-repeat: no-repeat;
   background-size: auto;
   background-position: top center;
+  background-color: #000;
   height: 650px;
   background-attachment: fixed; }
 
 section {
-  padding: 80px 0;
   height: 250px;
   background-color: #C9C8C8; }
 
 p, h1, h2, h3, a, button {
   font-family: "Lato", sans-serif; }
-
-h1 {
-  margin-bottom: 50px; }
 
 h2 {
   color: #2699FB;
@@ -48,9 +42,13 @@ button {
 footer {
   background-color: #2699FB; }
 
-.searchInfo {
-  padding-top: 80px; }
+/*.searchInfo {
+  padding-top: 20px;
+}
 
+.searchTitle {
+  padding-top: 30px;
+}*/
 .footer {
   color: #FFF; }
 
@@ -58,11 +56,11 @@ footer {
   background-color: #EEE; }
 
 .details {
-  font-size: 24px; }
+  font-size: 1.5rem; }
 
 .linkResult {
   color: #F18F01;
-  font-size: 24px; }
+  font-size: 1.5rem; }
 
 /* The Modal (background) */
 .modal {
