--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,10 @@
-$primary-color: #2699FB;
-$secondary-color: #F18F01;
-$neutral-color: #C9C8C8;
-$primary-font-family: 'Lato', sans-serif;
+// Utilities
+@import 'utils/variables';
+
+
+/* -------------------------------------------- */
+/* BASIC SETUP */
+/* -------------------------------------------- */
 
 * {
     margin: 0;
@@ -13,15 +16,16 @@ header {
   background-image: linear-gradient(rgba(0, 7, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/activitybckgrnd.jpg");
   background-repeat: no-repeat;
   background-size: auto;
-  background-position: top center;
+  background-position: top left;
   background-color: #000;
-  height: 650px;
+  height: 575px;
   background-attachment: fixed;
 }
 
 section {
     height: 250px;
     background-color: $neutral-color;
+    padding-top: 50px;
 }
 
 p, h1, h2, h3, a, button {
@@ -31,7 +35,7 @@ p, h1, h2, h3, a, button {
 
 h2 {
   color: $primary-color;
-  //padding-top: 100px;
+  padding-top: 100px;
 }
 
 h1, h2, h3 {
@@ -50,78 +54,29 @@ p {
   color: #2699fb;
 }
 
+input {
+  height: 35px;
+}
+
 button {
   background-color: $secondary-color;
   color: #FFF;
+  transition: background-color 0.2s, border 0.2s, color 0.2s;
+}
+
+button:hover {
+  background-color: #fff;
+  color: $secondary-color;
 }
 
 footer {
   background-color: $primary-color;
+  height: 70px;
 }
 
-/*.searchInfo {
-  padding-top: 20px;
-}
-
-.searchTitle {
-  padding-top: 30px;
-}*/
-
-.footer {
-  color: #FFF;
-}
-
-.results {
-  background-color: #EEE;
-}
-
-.details {
-  font-size: 1.5rem;
-}
-
-.linkResult {
-  color: $secondary-color;
-  font-size: 1.5rem;
-}
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  //padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity*/
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  color: #2699FB;
-  margin: auto;
-  //padding: 20px;
-  border: 1px solid #888;
-  width: 60%;
-}
-
-/* The Close Button */
-.close {
-  color: #AAA;
-  text-align: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: $secondary-color;
-  text-decoration: none;
-}
+/* -------------------------------------------- */
+/* ENTER PAGE */
+/* -------------------------------------------- */
 
 #hideMe {
   height: 900px;
@@ -145,3 +100,87 @@ footer {
 
 #showMe {
 display: none; }
+
+#enter {
+  margin-top: 20px;
+}
+
+/* -------------------------------------------- */
+/*  CUSTOM STYLES */
+/* -------------------------------------------- */
+
+.searchInfo {
+  padding-top: 20px;
+}
+
+.searchTitle {
+  padding-top: 30px;
+}
+
+.footer {
+  color: #FFF;
+  padding-top: 20px;
+}
+
+.results {
+  background-color: #EEE;
+}
+
+.details {
+  font-size: 1.5rem;
+}
+
+.linkResult {
+  color: $secondary-color;
+  font-size: 1.5rem;
+}
+
+.errMsg {
+  color: #FF0000;
+}
+
+/* -------------------------------------------- */
+/* MODAL - RESULT DETAILS */
+/* -------------------------------------------- */
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity*/
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: $neutral-color;
+  color: #2699FB;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%;
+}
+
+.detailImg {
+  margin-bottom: 20px;
+}
+
+/* The Close Button */
+.close {
+  color: $secondary-color;
+  text-align: right;
+  font-size: 28px;
+  font-weight: bold;
+
+  .close:hover,
+  .close:focus {
+    text-decoration: none;
+  }
+}
