--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,13 +13,8 @@
 }
 
 header {
-  background-image: linear-gradient(rgba(0, 7, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/activitybckgrnd.jpg");
-  background-repeat: no-repeat;
-  background-size: auto;
-  background-position: top left;
   background-color: #000;
   height: 575px;
-  background-attachment: fixed;
 }
 
 section {
@@ -51,7 +46,7 @@ a:hover, .searchInfo, .resultInfo {
 }
 
 p {
-  color: #2699fb;
+  color: $primary-color;
 }
 
 input {
@@ -109,23 +104,23 @@ display: none; }
 /*  CUSTOM STYLES */
 /* -------------------------------------------- */
 
+/* Search type details */
 .searchInfo {
   padding-top: 20px;
 }
 
+/* Search box text */
 .searchTitle {
   padding-top: 30px;
 }
 
+/* Copyright text */
 .footer {
   color: #FFF;
   padding-top: 20px;
 }
 
-.results {
-  background-color: #EEE;
-}
-
+/* Search type details */
 .details {
   font-size: 1.5rem;
 }
@@ -135,6 +130,7 @@ display: none; }
   font-size: 1.5rem;
 }
 
+/* Error */
 .errMsg {
   color: #FF0000;
 }
@@ -168,19 +164,39 @@ display: none; }
   width: 60%;
 }
 
+
+/* Image in the modal content */
 .detailImg {
   margin-bottom: 20px;
+  width: 50%;
+  height: 50%;
 }
 
 /* The Close Button */
 .close {
   color: $secondary-color;
   text-align: right;
-  font-size: 28px;
+  font-size: 1.75rem;
   font-weight: bold;
 
   .close:hover,
   .close:focus {
     text-decoration: none;
+  }
+}
+
+@media screen and (min-width: 560px) {
+  header {
+    background-image: linear-gradient(rgba(0, 7, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/activitybckgrnd.jpg");
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: top center;
+    height: 575px;
+    background-attachment: fixed;
+  }
+
+  .detailImg {
+    width: 100%;
+    height: 100%;
   }
 }
