--- a/css/main.css
+++ b/css/main.css
@@ -97,8 +97,9 @@ footer {
 
 /* Search type details */
 .details {
-  font-size: 1.5rem; }
+  font-size: 1rem; }
 
+/* Result link text */
 .linkResult {
   color: #F18F01;
   font-size: 1.5rem; }
@@ -145,8 +146,9 @@ footer {
 /* Image in the modal content */
 .detailImg {
   margin-bottom: 20px;
-  width: 50%;
-  height: 50%; }
+  padding-top: 20px;
+  width: 70%;
+  height: 70%; }
 
 /* The Close Button */
 .close {
@@ -158,6 +160,9 @@ footer {
   .close .close:focus {
     text-decoration: none; }
 
+/* -------------------------------------------- */
+/* MEDIA QUERIES */
+/* -------------------------------------------- */
 @media screen and (min-width: 560px) {
   header {
     background-image: linear-gradient(rgba(0, 7, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/activitybckgrnd.jpg");
@@ -168,4 +173,6 @@ footer {
     background-attachment: fixed; }
   .detailImg {
     width: 100%;
-    height: 100%; } }
+    height: 100%; }
+  .details {
+    font-size: 1.4rem; } }
