--- a/scss/main.scss
+++ b/scss/main.scss
@@ -122,9 +122,10 @@ display: none; }
 
 /* Search type details */
 .details {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
+/* Result link text */
 .linkResult {
   color: $secondary-color;
   font-size: 1.5rem;
@@ -168,8 +169,9 @@ display: none; }
 /* Image in the modal content */
 .detailImg {
   margin-bottom: 20px;
-  width: 50%;
-  height: 50%;
+  padding-top: 20px;
+  width: 70%;
+  height: 70%;
 }
 
 /* The Close Button */
@@ -185,6 +187,10 @@ display: none; }
   }
 }
 
+/* -------------------------------------------- */
+/* MEDIA QUERIES */
+/* -------------------------------------------- */
+
 @media screen and (min-width: 560px) {
   header {
     background-image: linear-gradient(rgba(0, 7, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/activitybckgrnd.jpg");
@@ -198,5 +204,9 @@ display: none; }
   .detailImg {
     width: 100%;
     height: 100%;
+  }
+
+  .details {
+    font-size: 1.4rem;
   }
 }
