--- a/scss/main.scss
+++ b/scss/main.scss
@@ -136,6 +136,12 @@ display: none; }
   color: #FF0000;
 }
 
+.vertical-center {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+}
+
 /* -------------------------------------------- */
 /* MODAL - RESULT DETAILS */
 /* -------------------------------------------- */
